--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -5,18 +5,26 @@
   </div>
 
   <ul id="nav-bar">
+
     <li class="active"><a href="#">Home</a></li>
-    <li id="register-btn"><a
+
+    <li id="register-btn" *ngIf="!userId"><a
       onclick="document.getElementById('register').style.display='block'">Register</a></li>
-    <li id="login-btn"><a onclick="document.getElementById('login').style.display='block'">Login</a></li>
-    <li id="profile-dropdown" class="dropdown hidden">
-      <a id="username" class="dropbtn"></a>
+
+    <li id="login-btn" *ngIf="!userId"><a onclick="document.getElementById('login').style.display='block'">Login</a></li>
+
+    <li id="profile-dropdown" class="dropdown" *ngIf="userId">
+      <a id="username" class="dropbtn">{{username}} <img class="fa fa-caret-down" src="../../../assets/drop-down-arrow-16px.png" alt="Username {{username}} menu"></a>
       <div class="dropdown-content">
         <a id="profile-btn">Profile</a>
         <a id="favorites-btn">Favorites</a>
-        <a id="logout-btn">Logout</a>
+        <a id="logout-btn" (click)="logout()">Logout</a>
       </div>
     </li>
   </ul>
 
 </nav>
+
+<app-register></app-register>
+<app-login></app-login>
+
