--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -44,7 +44,7 @@
 
       <!--------------------------------------- BUTTONS: -------------------------------------->
 
-      <button class="loginbtn login-btn" [disabled]="loginForm.invalid" (click)="submit()" >Login</button>
+      <button class="loginbtn login-btn" [disabled]="loginForm.invalid" (click)="login()" >Login</button>
       <label>
         <input type="checkbox" checked="checked" name="remember"> Remember me
       </label>
