--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -8,16 +8,16 @@
 
     <li class="active"><a href="#">Home</a></li>
 
-    <li id="register-btn" *ngIf="!userId"><a
+    <li id="register-btn" *ngIf="!session.userId"><a
       onclick="document.getElementById('register').style.display='block'">Register</a></li>
 
-    <li id="login-btn" *ngIf="!userId"><a onclick="document.getElementById('login').style.display='block'">Login</a></li>
+    <li id="login-btn" *ngIf="!session.userId"><a onclick="document.getElementById('login').style.display='block'">Login</a></li>
 
-    <li id="profile-dropdown" class="dropdown" *ngIf="userId">
-      <a id="username" class="dropbtn">{{username}} <img class="fa fa-caret-down" src="../../../assets/drop-down-arrow-16px.png" alt="Username {{username}} menu"></a>
+    <li id="profile-dropdown" class="dropdown" *ngIf="session.userId">
+      <a id="username" class="dropbtn">{{session.username}} <img class="fa fa-caret-down" src="../../../assets/drop-down-arrow-16px.png" alt="Username {{session.username}} menu"></a>
       <div class="dropdown-content">
-        <a id="profile-btn">Profile</a>
-        <a id="favorites-btn">Favorites</a>
+        <a id="profile-btn" routerLink="/profile">Profile</a>
+        <a id="favorites-btn" routerLink="/favorites">Favorites</a>
         <a id="logout-btn" (click)="logout()">Logout</a>
       </div>
     </li>
