--- a/src/app/components/header/login/login.component.html
+++ b/src/app/components/header/login/login.component.html
@@ -10,7 +10,7 @@
   <!------------------------------------- LOGIN FORM --------------------------------------->
   <form class="login-form-modal-content animate" [formGroup]="loginForm">
     <div class="imgcontainer">
-      <img src="assets/img_avatar2.png" alt="Avatar" class="avatar">
+      <img src="../../../../assets/img_avatar2.png" alt="Avatar" class="avatar">
     </div>
 
     <div class="login-form-container">
