--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -6,7 +6,7 @@
 
   <ul id="nav-bar">
 
-    <li class="active"><a href="#">Home</a></li>
+    <li class="active"><a routerLink="">Home</a></li>
 
     <li id="register-btn" *ngIf="!session.userId"><a
       onclick="document.getElementById('register').style.display='block'">Register</a></li>
