--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -1,4 +1,3 @@
-
 <main>
 <h2>Your place to search Movies & TV Shows information</h2>
 
@@ -32,7 +31,7 @@
 
 </section>
 
-<h3>Top Rated TV Shows</h3>
+<h3>Popular TV Shows</h3>
 <section id="top-rated">
 
   <article id="article-{{i}}" class="trending card" *ngFor="let media of topRatedMediaArray; index as i">
