--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -6,7 +6,7 @@
 
   <ul id="nav-bar">
 
-    <li class="active"><a routerLink="">Home</a></li>
+    <li class="active"><a routerLink="" routerLinkActive=”clase-que-indique-activo”>Home</a></li>
 
     <li id="register-btn" *ngIf="!session.userId"><a
       onclick="document.getElementById('register').style.display='block'">Register</a></li>
@@ -16,8 +16,8 @@
     <li id="profile-dropdown" class="dropdown" *ngIf="session.userId">
       <a id="username" class="dropbtn">{{session.username}} <img class="fa fa-caret-down" src="../../../assets/drop-down-arrow-16px.png" alt="Username {{session.username}} menu"></a>
       <div class="dropdown-content">
-        <a id="profile-btn" routerLink="/profile">Profile</a>
-        <a id="favorites-btn" routerLink="/favorites">Favorites</a>
+        <a id="profile-btn" routerLink="/profile" routerLinkActive=”clase-que-indique-activo”>Profile</a>
+        <a id="favorites-btn" routerLink="/favorites" routerLinkActive=”clase-que-indique-activo”>Favorites</a>
         <a id="logout-btn" (click)="logout()">Logout</a>
       </div>
     </li>
@@ -25,6 +25,6 @@
 
 </nav>
 
-<app-register></app-register>
+<app-register ></app-register>
 <app-login></app-login>
 
