video-iframe-ok

--- a/src/app/components/details/details.component.css
+++ b/src/app/components/details/details.component.css
@@ -61,7 +61,7 @@
   padding: 20px;                    /* Some padding */
 }
 
-#video-button {
+.video-button {
   position: absolute;
   right: 10%;
   cursor: pointer;
