--- a/src/app/components/favorites/favorites.component.html
+++ b/src/app/components/favorites/favorites.component.html
@@ -1,1 +1,26 @@
-<p>favorites works!</p>
+<div id="trending-modal" class="modal">
+
+  <!-- Modal content -->
+  <div class="modal-content">
+    <!--<span class="close">&times;</span>-->
+    <div id="modal-inner-content" class="grid">
+
+      <article id="favorite-{{i}}" class="trending card" (click)="showDetails(favorite)" *ngFor="let favorite of favorites; index as i">
+        <div class="image-container">
+          <div class="rating">{{favorite.vote_average?.toFixed(1)}}</div>
+          <img *ngIf="favorite.mediaType == 'movie'" src="https://image.tmdb.org/t/p/w342{{favorite.poster_path}}" alt="{{favorite.title}} Poster">
+          <img *ngIf="favorite.mediaType === 'tv'" src="https://image.tmdb.org/t/p/w342{{favorite.poster_path}}" alt="{{favorite.name}} Poster">
+        </div>
+        <h3 *ngIf="favorite.mediaType == 'movie'" class="title">{{favorite.title}}</h3>
+        <h3 *ngIf="favorite.mediaType == 'tv'" class="title">{{favorite.name}}</h3>
+        <p *ngIf="favorite.mediaType == 'movie'"  class="release-date">Released: {{favorite.release_date}}</p>
+        <p *ngIf="favorite.mediaType == 'tv'"  class="release-date">Released: {{favorite.first_air_date}}</p>
+        <p class="media_type">{{favorite.mediaType}}</p>
+
+      </article>
+
+
+    </div>
+  </div>
+
+</div>
