--- a/src/app/components/details/details.component.html
+++ b/src/app/components/details/details.component.html
@@ -5,17 +5,17 @@
 
         <!--// TMDB "poster_sizes": ["w92", "w154", "w185", "w342", "w500", "w780", "original"]-->
 
-        <img *ngIf="mediaType === 'movie' && video === false" class="big-card-image" src="https://image.tmdb.org/t/p/w780{{media.backdrop_path}}" alt="{{media.title}} Image">
+        <img *ngIf="mediaType === 'movie' && videoActive === false" class="big-card-image" src="https://image.tmdb.org/t/p/w780{{media.backdrop_path}}" alt="{{media.title}} Image">
 
-        <img *ngIf="mediaType === 'tv' && video === false" class="big-card-image" src="https://image.tmdb.org/t/p/w780{{media.backdrop_path}}" alt="{{media.name}} Image">
+        <img *ngIf="mediaType === 'tv' && videoActive === false" class="big-card-image" src="https://image.tmdb.org/t/p/w780{{media.backdrop_path}}" alt="{{media.name}} Image">
 
-        <iframe id="youtube-video" *ngIf="video === true" [src]="sanitizedVideoUrl" type="text/html" width="720" height="405" allowfullscreen="">
+        <iframe id="youtube-video" *ngIf="videoActive === true" [src]="sanitizedVideoUrl" type="text/html" width="720" height="405" allowfullscreen="">
 
         </iframe>
 
-        <a class="video-button" *ngIf="video === false" (click)="showVideo()">Play video</a>
+        <a class="video-button" *ngIf="videoActive === false" (click)="showVideo()">Play video</a>
 
-        <a class="video-button" *ngIf="video === true" (click)="showVideo()">Stop video</a>
+        <a class="video-button" *ngIf="videoActive === true" (click)="showVideo()">Stop video</a>
 
         <a id="favorite-button" *ngIf="session.userId" (click)="toggleFavorite(session.userId, media)">Add to Favorites</a>
 
