--- a/src/app/components/header/login/login.component.html
+++ b/src/app/components/header/login/login.component.html
@@ -2,8 +2,7 @@
 
 <!-- The Modal -->
 <div id="login" class="login-form-modal">
-            <span (click)="toggleLogin()" class="close-login-form"
-                  title="Close Modal">&times;</span>
+  <span (click)="toggleLogin()" class="close-login-form" title="Close Modal">&times;</span>
 
   <!-- Modal Content -->
 
@@ -51,8 +50,7 @@
     </div>
 
     <div class="cancel-longin-container">
-      <button type="button" (click)="toggleLogin()"
-              class="cancelbtn-login">Cancel</button>
+      <button type="button" (click)="toggleLogin()" class="cancelbtn-login">Cancel</button>
       <span class="pass"><a href="#">Forgot password?</a></span>
     </div>
   </form>
