--- a/src/app/components/header/register/register.component.html
+++ b/src/app/components/header/register/register.component.html
@@ -2,8 +2,7 @@
 
 <!-- The Modal (contains the Sign Up form) -->
 <div id="register" class="register-form-modal">
-            <span class="close-register-form"
-                  title="Close Modal" (click)="toggleRegister()">&times;</span>
+  <span class="close-register-form" title="Close Modal" (click)="toggleRegister()">&times;</span>
 
 
   <!------------------------------------- REGISTER FORM --------------------------------------->
@@ -20,7 +19,7 @@
 
       <div class="error" *ngIf="registerForm.controls['username'].errors && registerForm.controls['username'].dirty">
         <p *ngIf="registerForm.controls['username'].errors['required']">Please enter a Username</p>
-        <p *ngIf="registerForm.controls['username'].errors['minlength']">Min 6 character long</p>
+        <p *ngIf="registerForm.controls['username'].errors['minlength']">Min 4 character long</p>
       </div>
 
       <!---------------------------------- EMAIL INPUT: ----------------------------------->
@@ -40,11 +39,11 @@
         <input id="register-pass1" type="password" placeholder="Enter Password" name="pass" formControlName="password">
       </div>
 
-      <i></i>
+      <!--<i>Show password icon to be implemented</i>-->
 
       <div class="error" *ngIf="registerForm.controls['password'].errors && registerForm.controls['password'].dirty">
         <p *ngIf="registerForm.controls['password'].errors['required']">Please enter your password</p>
-        <p *ngIf="registerForm.controls['password'].errors['minlength']">Your password must have more than 7 characters</p>
+        <p *ngIf="registerForm.controls['password'].errors['minlength']">Password must have 8 or more characters</p>
         <p *ngIf="registerForm.controls['password'].errors['pattern']">It must have at least one uppercase, one lowercase and one number</p>
       </div>
 
