--- a/src/app/components/not-found/not-found.component.html
+++ b/src/app/components/not-found/not-found.component.html
@@ -1,1 +1,4 @@
-<p>not-found works!</p>
+
+<div class="not-found-container">
+  <img src="https://http.dog/404.jpg" alt="Dog lost his bone">
+</div>
