--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -21,6 +21,9 @@
         <a id="logout-btn" (click)="logout()">Logout</a>
       </div>
     </li>
+
+    <li class="active"><a href="https://moviesback.matiabossio.com.ar/mattmdb-1.0-SNAPSHOT/api/v2/swagger-ui/#/" target="_blank">API Docs</a></li>
+
   </ul>
 
 </nav>
