--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -22,7 +22,7 @@
       </div>
     </li>
 
-    <li class="active"><a href="https://moviesback.matiabossio.com.ar/mattmdb-1.0-SNAPSHOT/api/v2/swagger-ui/#/" target="_blank">API Docs</a></li>
+    <li class="active"><a href="https://pokechallenge.matiabossio.com.ar:444/mattmdb-1.0-SNAPSHOT/api/v2/swagger-ui/#/" target="_blank">API Docs</a></li>
 
   </ul>
 
